# django-app-engine

./: MANIFEST.in  README.md  bump_app_version_on_new_commit.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
django_app_engine/: __init__.py  apps.py
django_app_engine/management/commands/: deploy_it.py  login.py  new_model.py  startapp.py
django_app_engine/management/default_app_model_template/: README.md
django_app_engine/management/default_app_template/: README.md
django_conf/: settings.py
docs/: CNAME  index.html
git_hooks/: pre-commit
website/: index.html
