[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["django_example_project", ".env", "git_hooks", ".github", ".git"]

[project]
name = "django-api-engine"
authors = [
    {name = "Lauro Cesar de Oliveira", email = "lauro.oliveira@me.com"},
]
description = "Django projects supercharged with a Full System Design Built In."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0 license"}
dynamic = ["version"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django"
]
dependencies = [
    "Django>=5",
    "djangorestframework-xml",
    "djangorestframework",
    "rest-pandas",
    "requests",
    "numpy",
    "daphne",
    "django-cors-headers",
    "gunicorn",
    "celery[librabbitmq,redis,auth,msgpack]",
    "autobahn",
    "Twisted[tls,http2]",
    "channels",
    "channels_redis"
]

[tool.setuptools.dynamic]
version = {attr = "django_app_engine.VERSION"}


[project.urls]
Homepage = "https://github.com/sharedway/django-app-engine"
Issues = "https://github.com/sharedway/django-app-engine/issues"
